[gd_scene load_steps=39 format=2]

[ext_resource path="res://Scripts/torreta.gd" type="Script" id=1]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=2]
[ext_resource path="res://Inimigos/towerDefense_tile250.png" type="Texture" id=3]
[ext_resource path="res://Inimigos/towerDefense_tile228.png" type="Texture" id=4]
[ext_resource path="res://SFX/projectil_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Inimigos/towerDefense_tile298.png" type="Texture" id=6]
[ext_resource path="res://Scripts/area_dano.gd" type="Script" id=7]
[ext_resource path="res://SFX/metal_hit.wav" type="AudioStream" id=8]
[ext_resource path="res://sprites/explosionSmoke2.png" type="Texture" id=9]
[ext_resource path="res://sprites/explosionSmoke4.png" type="Texture" id=10]
[ext_resource path="res://sprites/explosionSmoke5.png" type="Texture" id=11]
[ext_resource path="res://sprites/explosionSmoke3.png" type="Texture" id=12]
[ext_resource path="res://Inimigos/towerDefense_tile020.png" type="Texture" id=13]
[ext_resource path="res://sprites/explosionSmoke1.png" type="Texture" id=14]
[ext_resource path="res://Inimigos/towerDefense_tile019.png" type="Texture" id=15]
[ext_resource path="res://SFX/tank_explosion.wav" type="AudioStream" id=16]
[ext_resource path="res://scenes/barra_vida.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scripts/canhao.gd" type="Script" id=18]
[ext_resource path="res://Inimigos/towerDefense_tile204.png" type="Texture" id=19]
[ext_resource path="res://Scripts/tele_guiado.gd" type="Script" id=20]
[ext_resource path="res://SFX/barrel_explosion.wav" type="AudioStream" id=21]
[ext_resource path="res://Inimigos/towerDefense_tile227.png" type="Texture" id=22]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.67451 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0537383, 0.389571 ), 0.0, 0.0, 0, 0, Vector2( 0.969626, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.4
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=6]
radius = 19.989

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fogo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fogo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 1 ) ]
}

[sub_resource type="CircleShape2D" id=17]
radius = 100.0

[sub_resource type="CircleShape2D" id=9]
radius = 28.2612

[sub_resource type="Animation" id=10]
resource_name = "explosao"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("explosionSmoke1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosionSmoke1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.806972, 0.795836 ), Vector2( 1.2, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("explosionSmoke1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../fuligem:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=11]
resource_name = "disparo"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 0 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 22 ), ExtResource( 19 ) ]
}

[sub_resource type="Gradient" id=12]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.262745 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0.00700934, 0.303681 ), 0.0, -0.68628, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[node name="torreta" type="StaticBody2D" groups=[
"entidade_radar",
]]
collision_layer = 0
script = ExtResource( 1 )

[node name="base" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -22.7818, -17.7094, -22.7818, 6.79028, -14.3183, 17.9265, 12.4087, 17.0356, 21.3177, 9.01752, 21.7631, -16.8185 )

[node name="canhao_pesado" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 18 )

[node name="tempo_disparo" type="Timer" parent="canhao_pesado"]
wait_time = 0.3

[node name="fumaca" type="Particles2D" parent="canhao_pesado"]
position = Vector2( 29.6648, 0.794678 )
rotation = -3.14159
z_index = 10
emitting = false
amount = 4
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="canhao_pesado"]
rotation = 1.5708
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="canhao_pesado"]
position = Vector2( -10.9601, -0.545036 )
shape = SubResource( 6 )

[node name="mira" type="RayCast2D" parent="canhao_pesado"]
rotation = -6.28318
cast_to = Vector2( 100, 0 )

[node name="fogo" type="Node2D" parent="canhao_pesado"]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1.3, 1 )

[node name="fogo1" type="Sprite" parent="canhao_pesado/fogo"]
position = Vector2( 39.6875, 5.40552 )
rotation = 1.57079
texture = ExtResource( 6 )

[node name="fogo2" type="Sprite" parent="canhao_pesado/fogo"]
position = Vector2( 39.6875, -7.04309 )
rotation = 1.57079
texture = ExtResource( 6 )

[node name="barra" type="Node2D" parent="canhao_pesado"]
z_index = 100

[node name="barra_vida" parent="canhao_pesado/barra" instance=ExtResource( 17 )]
margin_left = -51.0
margin_top = 19.5
margin_right = -6.0
margin_bottom = 28.5
rect_rotation = -89.9999

[node name="som_disparo" type="AudioStreamPlayer" parent="canhao_pesado"]
stream = ExtResource( 5 )
pitch_scale = 0.7
bus = "fx"

[node name="anim_torreta" type="AnimationPlayer" parent="canhao_pesado"]
playback_speed = 1.5
anims/disparo = SubResource( 7 )

[node name="sensor" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensor"]
shape = SubResource( 17 )

[node name="area_dano" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )

[node name="shape" type="CollisionShape2D" parent="area_dano"]
shape = SubResource( 9 )

[node name="explosao" type="Node2D" parent="."]

[node name="explosionSmoke1" type="Sprite" parent="explosao"]
visible = false
position = Vector2( -0.513561, -0.252302 )
scale = Vector2( 0.806972, 0.795836 )
texture = ExtResource( 14 )

[node name="anim" type="AnimationPlayer" parent="explosao"]
anims/explosao = SubResource( 10 )

[node name="fuligem" type="Sprite" parent="."]
visible = false
position = Vector2( 1.35473, -0.531841 )
texture = ExtResource( 15 )

[node name="fuligem" type="Sprite" parent="fuligem"]
position = Vector2( -1.7818, -0.44545 )
texture = ExtResource( 13 )

[node name="sfxs" type="Node2D" parent="."]

[node name="sfx_hit" type="AudioStreamPlayer" parent="sfxs"]
stream = ExtResource( 8 )
pitch_scale = 2.26
bus = "fx"

[node name="explosao" type="AudioStreamPlayer" parent="sfxs"]
stream = ExtResource( 16 )
pitch_scale = 0.45
bus = "fx"

[node name="tele_guiado" type="Area2D" parent="."]
visible = false
z_index = 101
collision_layer = 2
collision_mask = 0
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="tele_guiado"]
rotation = 1.5708
texture = ExtResource( 19 )

[node name="time_disparo" type="Timer" parent="tele_guiado"]
wait_time = 3.0

[node name="som_disparo" type="AudioStreamPlayer" parent="tele_guiado"]
stream = ExtResource( 21 )
pitch_scale = 0.22
bus = "fx"

[node name="anim" type="AnimationPlayer" parent="tele_guiado"]
anims/disparo = SubResource( 11 )

[node name="barra" type="Node2D" parent="tele_guiado"]
z_index = 100

[node name="barra_vida" parent="tele_guiado/barra" instance=ExtResource( 17 )]
margin_left = -51.0
margin_top = 19.5
margin_right = -6.0
margin_bottom = 28.5
rect_rotation = -89.9999

[node name="Particles2D" type="Particles2D" parent="tele_guiado"]
position = Vector2( 18.5206, -0.561218 )
emitting = false
lifetime = 0.8
one_shot = true
explosiveness = 0.8
randomness = 0.28
process_material = SubResource( 16 )
texture = ExtResource( 2 )

[connection signal="timeout" from="canhao_pesado/tempo_disparo" to="canhao_pesado" method="_on_tempo_disparo_timeout"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="dano" from="area_dano" to="." method="_on_area_dano_dano"]
[connection signal="timeout" from="tele_guiado/time_disparo" to="tele_guiado" method="_on_disparo_timeout"]
